# Home_Energy_Consumption_Forecasting_with_Agentic_Recommendation

./: README.md  ml_model_training.ipynb  pyproject.toml  requirements.txt
artifacts/: prophet_air_conditioning.pkl  prophet_computer.pkl  prophet_dishwasher.pkl  prophet_fridge.pkl  prophet_heater.pkl  prophet_lights.pkl  prophet_microwave.pkl  prophet_oven.pkl  prophet_registry.json  prophet_tv.pkl  prophet_washing_machine.pkl
