[project]
name = "home-energy-consumption-forecasting-with-agentic-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "fastapi>=0.135.2",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "prophet>=1.3.0",
    "pydantic[email]>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
